--- a/index.html
+++ b/index.html
@@ -399,10 +399,10 @@
       <h1>Brew Haven</h1>
       <nav>
         <ul>
-          <li><a href="#home">Home</a></li>
-          <li><a href="#menu">Menu</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#index/home">Home</a></li>
+          <li><a href="#index/menu">Menu</a></li>
+          <li><a href="#index/about">About</a></li>
+          <li><a href="#index/contact">Contact</a></li>
           <li><button onclick="logout()"  style="margin-left: 450%;background-color:#6b4f4f; color:white; border:none; padding:8px 16px; border-radius:5px; cursor:pointer;">Logout</button></li>
         </ul>
       </nav>
@@ -585,6 +585,42 @@
       }
     });
   }
+
+
+  function handleRouting() {
+  const hash = location.hash.substring(1);
+  const user = localStorage.getItem('loggedInUser');
+
+  if (hash.startsWith('index')) {
+    if (!user) {
+      Swal.fire({
+        title: 'Access Denied!',
+        text: 'You must login first.',
+        icon: 'warning',
+        confirmButtonColor: '#6b4f4f'
+      }).then(() => {
+        location.hash = 'login';
+      });
+      return;
+    }
+
+    showPage('index');
+
+    const sectionId = hash.split('/')[1];
+    if (sectionId) {
+      setTimeout(() => {
+        const section = document.getElementById(sectionId);
+        if (section) {
+          section.scrollIntoView({ behavior: 'smooth' });
+        }
+      }, 100);
+    }
+
+  } else {
+    showPage(hash);
+  }
+}
+
 </script>
 
 </body>
