--- a/index.html
+++ b/index.html
@@ -218,6 +218,25 @@
       font-size: 1.2rem;
     }
 
+    .menu-item .price {
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    .buy-button {
+      padding: 8px 16px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .buy-button:hover {
+      background-color: #45a049;
+    }
+
+
 
     .about-content {
       width: 100%;
@@ -424,25 +443,34 @@
           <img src="img/espresso.jpg" alt="Espresso">
           <h3>Espresso</h3>
           <p>Strong and bold, just how you like it.</p>
+          <p class="price">$2.50</p>
+          <button class="buy-button">Buy</button>
         </div>
         <div class="menu-item">
           <img src="img/latte.jpg" alt="Latte">
           <h3>Latte</h3>
           <p>Smooth and creamy with a shot of espresso.</p>
+          <p class="price">$3.50</p>
+          <button class="buy-button">Buy</button>
         </div>
         <div class="menu-item">
           <img src="img/Gevalia Cappuccino.jpg" alt="Cappuccino">
           <h3>Cappuccino</h3>
           <p>Perfect balance of espresso, steamed milk, and foam.</p>
+          <p class="price">$3.00</p>
+          <button class="buy-button">Buy</button>
         </div>
         <div class="menu-item">
           <img src="img/Cold brew Latte.jpg" alt="Cold Brew">
           <h3>Cold Brew</h3>
           <p>Chilled, refreshing, and flavorful.</p>
+          <p class="price">$3.75</p>
+          <button class="buy-button">Buy</button>
         </div>
       </div>
     </div>
   </section>
+  
 
   <section id="about" class="about">
     <div class="about-content">
